--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^0.8.6
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
+  sticky_grouped_list: ^3.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
