--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,10 @@ dependencies:
   provider: ^6.0.4
   image_picker: ^0.8.6
   firebase_core: ^2.3.0
-  cloud_firestore: ^4.1.0
   sticky_grouped_list: ^3.1.0
   shared_preferences: ^2.0.15
+  objectbox: ^1.7.0
+  objectbox_flutter_libs: any
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  objectbox_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
